@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-16T08:16:25Z",
-  "count_outdated" : 337,
-  "uniques_outdated" : 181,
-  "count" : 367,
+  "timestamp" : "2022-06-17T00:55:57Z",
+  "count_outdated" : 339,
+  "uniques_outdated" : 182,
+  "count" : 369,
   "uniques" : 199,
   "clones" : [
-    {
-      "timestamp": "2022-06-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-03T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
