@@ -1,3 +1,10 @@
+2022-06-17T00:55:57Z:
+* notice: last 14d: unq all: 4 30
+* notice: prev accum: outdated-unq outdated-all / unq all: 181 337 / 199 367
+* notice: next accum: outdated-unq outdated-all / unq all: 182 339 / 199 369
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-02] / [2022-06-16]
+
 2022-06-16T08:16:25Z:
 * notice: last 14d: unq all: 4 30
 * notice: prev accum: outdated-unq outdated-all / unq all: 181 337 / 198 367
